2007-01-02  Uwe Kindler <uwe_kindler@web.de>

	* cdl/hal_arm_at91sam7s.cdl Moved HAL_PLATFORM_XXX defines and
	definition of platform header file (CYGBLD_HAL_PLATFORM_H) from
	package CYGPKG_HAL_ARM_AT91SAM7 into board specific packages.
	
2006-06-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Implement the SPI bus 1 interface for
	the SAM7X and SAM7XC.

2006-06-01  John Eigelaar <jeigelaar@mweb.co.za>

	* include/plf_io.h: Add SPI DMA registers.

2006-05-20  John Eigelaar <jeigelaar@mweb.co.za>

	include/pkgconf/mlt_arm_at91sam7x128_rom.{h|ldi}
	include/pkgconf/mlt_arm_at91sam7x256_rom.{h|ldi}: Linker files
	for AT91SAM7X processor.
	
2006-05-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/at91sam7s_misc.c: Use the AT91 generic PIO manipulation
	macros. Move the LED function out into the board specific HAL
	package.

2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: 
	* include/pkgconf/mlt_arm_at91sam7s32_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s64_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s128_rom.ldi: 
	* include/pkgconf/mlt_arm_at91sam7s267_rom.ldi: 
	Allow CDL to control where in flash the image is placed.

2006-03-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Implement the USB interface when chip
	has the device.
	
2006-03-10  Oliver Munz  <oli@snr.ch>

	* hal_arm_at91sam7s.cdl: Change the PLL-defaults so that 96MHz is
	generated so that the USB does work.
	
2006-03-10  Andrew Lunn  <andrew.lunn@ascom.ch>
            Oliver Munz  <munz@speag.ch>
	
	* cdl/hal_arm_at91sam7s.cdl: Set the debug UART as the default
	channel and fix some dodge spelling.
	* src/at91sam7s_misc.c (hal_plf_hardware_init): Enable the Debug UART
	pins for output and control by the device.
	* include/plf_io.h: Define USART2 to be the debug UART.
	
2006-03-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Change the crystal frequency.  The