@@ -1,3 +1,9 @@
+2007-01-17  John Eigelaar <jeigelaar@mweb.co.za>
+
+	* include/plf_io.h
+	* src/at91sam7s_misc.c
+	Added code to initialise the platform ethernet hardware if need be
+	 
 2007-01-02  Uwe Kindler <uwe_kindler@web.de>
 
 	* cdl/hal_arm_at91sam7s.cdl Moved HAL_PLATFORM_XXX defines and
